[project]
name = "540-ml-workshop"
version = "0.1.0"
description = "Interactive tutorials aimed at building foundational Machine Learning competency."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2",
    "numpy>=2.4",
    "matplotlib>=3.10",
    "scipy>=1.17",
    "scikit-learn>=1.9",
]
